syntax = "proto3";

package random.v1;

option go_package = "demoapi/pb;pb";

// Request is empty; we just subscribe.
message SubscribeRequest {}

// The stream item.
message Number {
  int32 value = 1;
}

service RandomService {
  // Server-streaming: backend pushes updates to the browser.
  rpc SubscribeRandom(SubscribeRequest) returns (stream Number);
}
